<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="org.wildaid.oceanwatch.vessel.VesselViewModel" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".vessel.VesselFragment">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewmodel.onNextClick()}"
            android:text="@string/btn_next" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_next"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vessel_information" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconContentDescription="@string/vessel_name"
                    app:endIconDrawable="@android:drawable/ic_menu_camera"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vessel_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vessel_name"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/permit_number"
                        android:singleLine="true"
                        android:text="@={viewmodel.vesselName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconContentDescription="@string/permit_number"
                    app:endIconDrawable="@android:drawable/ic_menu_camera"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/permit_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/permit_number"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/home_port"
                        android:singleLine="true"
                        android:text="@={viewmodel.permitNumber}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconContentDescription="@string/vessel_name"
                    app:endIconDrawable="@android:drawable/ic_menu_camera"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/home_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_port"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/nationality"
                        android:singleLine="true"
                        android:text="@={viewmodel.homePort}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nationality"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/date"
                        android:singleLine="true"
                        android:text="@={viewmodel.nationality}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_date_of_delivery" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/business"
                        android:singleLine="true"
                        android:text="@={viewmodel.date}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/business"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/business"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/location"
                        android:singleLine="true"
                        android:text="@={viewmodel.business}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/ems_type"
                        android:singleLine="true"
                        android:text="@={viewmodel.location}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/electronic_monitoring_system" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconContentDescription="@string/ems_type"
                    app:endIconDrawable="@android:drawable/ic_menu_camera"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ems_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ems_type"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/registry_number"
                        android:singleLine="true"
                        android:text="@={viewmodel.emsType}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconContentDescription="@string/registry_number"
                    app:endIconDrawable="@android:drawable/ic_menu_camera"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registry_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registry_number"
                        android:singleLine="true"
                        android:text="@={viewmodel.registeryNumber}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>